@@ -125,9 +125,9 @@
     </profile>
 
     <profile>
-      <id>java9</id>
+      <id>java9to13</id>
       <activation>
-        <jdk>9</jdk>
+        <jdk>[9,14)</jdk>
         <property>
           <name>environment</name>
           <value>ci</value>
@@ -135,253 +135,10 @@
       </activation>
 
       <properties>
-        <jdk-toolchain.version>9</jdk-toolchain.version>
-        <java.version>9</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-      </properties>
-
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.datasketches</groupId>
-          <artifactId>datasketches-memory-java8-tests</artifactId>
-          <version>${project.version}</version>
-          <classifier>tests</classifier>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-
-      <build>
-        <plugins>
-
-          <plugin>
-            <!-- Apache Parent pom, pluginManagement-->
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>${maven-surefire-plugin.version}</version>
-            <executions>
-              <execution>
-                <id>package-test</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <skip>false</skip>
-                  <argLine>
-                    --add-opens java.base/java.nio=ALL-UNNAMED
-                    --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
-                    --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
-                  </argLine>
-                  <dependenciesToScan>
-                    <dependency>org.apache.datasketches:datasketches-memory-java8-tests</dependency>
-                  </dependenciesToScan>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
-      <id>java10</id>
-      <activation>
-        <jdk>10</jdk>
-        <property>
-          <name>environment</name>
-          <value>ci</value>
-        </property>
-      </activation>
-
-      <properties>
-        <jdk-toolchain.version>10</jdk-toolchain.version>
-        <java.version>10</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-      </properties>
-
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.datasketches</groupId>
-          <artifactId>datasketches-memory-java8-tests</artifactId>
-          <version>${project.version}</version>
-          <classifier>tests</classifier>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-
-      <build>
-        <plugins>
-
-          <plugin>
-            <!-- Apache Parent pom, pluginManagement-->
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>${maven-surefire-plugin.version}</version>
-            <executions>
-              <execution>
-                <id>package-test</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <skip>false</skip>
-                  <argLine>
-                    --add-opens java.base/java.nio=ALL-UNNAMED
-                    --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
-                    --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
-                  </argLine>
-                  <dependenciesToScan>
-                    <dependency>org.apache.datasketches:datasketches-memory-java8-tests</dependency>
-                  </dependenciesToScan>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
-      <id>java11</id>
-      <activation>
-        <jdk>11</jdk>
-        <property>
-          <name>environment</name>
-          <value>ci</value>
-        </property>
-      </activation>
-
-      <properties>
-        <jdk-toolchain.version>11</jdk-toolchain.version>
-        <java.version>11</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-      </properties>
-
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.datasketches</groupId>
-          <artifactId>datasketches-memory-java8-tests</artifactId>
-          <version>${project.version}</version>
-          <classifier>tests</classifier>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-
-      <build>
-        <plugins>
-
-          <plugin>
-            <!-- Apache Parent pom, pluginManagement-->
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>${maven-surefire-plugin.version}</version>
-            <executions>
-              <execution>
-                <id>package-test</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <skip>false</skip>
-                  <argLine>
-                    --add-opens java.base/java.nio=ALL-UNNAMED
-                    --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
-                    --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
-                  </argLine>
-                  <dependenciesToScan>
-                    <dependency>org.apache.datasketches:datasketches-memory-java8-tests</dependency>
-                  </dependenciesToScan>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
-      <id>java12</id>
-      <activation>
-        <jdk>12</jdk>
-        <property>
-          <name>environment</name>
-          <value>ci</value>
-        </property>
-      </activation>
-
-      <properties>
-        <jdk-toolchain.version>12</jdk-toolchain.version>
-        <java.version>12</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-      </properties>
-
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.datasketches</groupId>
-          <artifactId>datasketches-memory-java8-tests</artifactId>
-          <version>${project.version}</version>
-          <classifier>tests</classifier>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-
-      <build>
-        <plugins>
-
-          <plugin>
-            <!-- Apache Parent pom, pluginManagement-->
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>${maven-surefire-plugin.version}</version>
-            <executions>
-              <execution>
-                <id>package-test</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <skip>false</skip>
-                  <argLine>
-                    --add-opens java.base/java.nio=ALL-UNNAMED
-                    --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
-                    --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
-                  </argLine>
-                  <dependenciesToScan>
-                    <dependency>org.apache.datasketches:datasketches-memory-java8-tests</dependency>
-                  </dependenciesToScan>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-
-        </plugins>
-      </build>
-    </profile>
-
-
-    <profile>
-      <id>java13</id>
-      <activation>
-        <jdk>13</jdk>
-        <property>
-          <name>environment</name>
-          <value>ci</value>
-        </property>
-      </activation>
-
-      <properties>
-        <jdk-toolchain.version>13</jdk-toolchain.version>
-        <java.version>13</java.version>
+        <!--suppress UnresolvedMavenProperty -->
+        <jdk-toolchain.version>${matrix.jdk.version}</jdk-toolchain.version>
+        <!--suppress UnresolvedMavenProperty -->
+        <java.version>${matrix.jdk.version}</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
       </properties>
